crates/compiler/src/tests/e2e/good/0292_fn_adder_closure/main.gom
fn adder(n: int32) -> (int32) -> int32 {
    |x: int32| x + n
}

fn main() {
    let add5 = adder(5);
    let add10 = adder(10);
    println(add5(3).to_string());
    println(add10(3).to_string());
}
