crates/compiler/src/tests/e2e/bad/0018_call_non_function/main.gom
fn main() -> unit {
  let multiplier = 5;
  let result = multiplier(3);
  println(result)
}
